--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "uvicorn>=0.34.0",
     "fastapi>=0.115.11",
+    "jinja2>=3.1.6",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
